--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
 	},
 	"autoload-dev": {
 		"psr-4": {
-			"Inpsyde\\Tests\\Nonces\\": "tests/"
+			"Inpsyde\\Tests\\Nonces\\": "tests/phpunit/unit/"
 		}
 	},
 	"extra": {
