--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,7 +9,10 @@
 >
 	<testsuites>
 		<testsuite name="unit">
-			<directory suffix="Test.php">tests/phpunit/unit</directory>
+			<directory suffix="Test.php">tests/phpunit/Unit</directory>
+		</testsuite>
+		<testsuite name="integration">
+			<directory suffix="Test.php">tests/phpunit/Integration</directory>
 		</testsuite>
 	</testsuites>
 </phpunit>
