Define PHP platform version.

--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,11 @@
 			"Inpsyde\\Nonces\\Tests\\": "tests/phpunit/"
 		}
 	},
+	"config": {
+		"platform": {
+			"php": "5.4.0"
+		}
+	},
 	"extra": {
 		"branch-alias": {
 			"dev-master": "1.0.x-dev"
